# Futures_bot

./: README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
app/: config.py  exc.py  logger.py
app/entity/: __init__.py  enums.py  mixins.py  order.py  trade.py
app/models/: __init__.py  mixins.py  orders.py
app/repository/: __init__.py  base.py  repositories.py  sauow.py
app/services/: api.py  direction.py  manager.py
app/utils/: datetime.py
migrations/: env.py
migrations/versions/: 6cc65f5e768f_init.py  f6b289d5f723_init.py
